--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -48,7 +48,10 @@ body {
 .catalog__filter {
     max-width: 232px;
     background: #fff;
-    padding: 40px 30px;
+    padding: 40px 0;
+}
+.catalog__filter>section {
+    padding: 0 30px;
 }
 .catalog__filter-header {
     display: flex;
@@ -78,12 +81,14 @@ body {
 .filter__choosed {
     width: 100%;
     margin-top: 38px;
+    padding-bottom: 9px;
 }
 .filter__choosed-title {
     font-weight: 700;
     font-size: 11px;
     line-height: 13px;
     text-transform: uppercase;
+    margin-bottom: 17px;
 }
 .choosed__item {
     display: inline-flex;
@@ -92,6 +97,7 @@ body {
     background: #2C2929;
     border-radius: 19px;
     padding: 2px 7px 2px 9px;
+    margin-bottom: 5px;
 }
 .choosed__item-x {
     background: transparent;
@@ -106,6 +112,9 @@ body {
     text-align: center;
     letter-spacing: .3px;
     color: #F2F2F2;
+}
+.catalog__filter-pricing {
+    background: rgba(244, 244, 244, 0.73);
 }
 .color__select {
     display: flex;
