--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -16,7 +16,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
     font-style: normal;
-    font-weight: medium;
+    font-weight: 500;
 }
 
 @font-face {
@@ -28,15 +28,15 @@
 
 @font-face {
     font-family: 'Druk Wide';
-    src: url('FileName.eot');
     src: url('../fonts/DrukWide/DrukWide-Medium.otf') format('opentype');
     font-style: normal;
-    font-weight: medium;
+    font-weight: 500;
 }
 
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     cursor: url('../svg/Cursor.svg'), auto;
@@ -67,6 +67,8 @@ label.option-label {
 }
 
 .catalog {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding-bottom: 100px;
     min-height: 100vh;
@@ -76,6 +78,7 @@ label.option-label {
     max-width: 232px;
     background: #fff;
     padding: 40px 0;
+    -webkit-box-shadow: 2px 4px 18px rgba(30, 27, 26, 0.07);
     box-shadow: 2px 4px 18px rgba(30, 27, 26, 0.07);
     border-radius: 0 0 10px 10px;
 }
@@ -88,8 +91,13 @@ label.option-label {
 }
 
 .catalog__filter-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
@@ -112,6 +120,8 @@ label.option-label {
     font-size: 9px;
     margin: 0 0 0 auto;
     max-height: 20px;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
 }
 
@@ -131,7 +141,11 @@ label.option-label {
 }
 
 .choosed__item {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 5px;
     background: #2C2929;
@@ -201,6 +215,7 @@ section.catalog__filter-pricing {
 #pricing__range-max {
     position: absolute;
     -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
     height: 2px;
     border-radius: 2px;
@@ -235,7 +250,11 @@ section.catalog__filter-gender {
 }
 
 .option {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     margin-bottom: 20px;
 }
@@ -277,7 +296,10 @@ section.catalog__filter-color {
 }
 
 .color__select {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 5px;
     max-width: 175px;
@@ -299,8 +321,14 @@ section.catalog__filter-color {
     position: absolute;
     inset: 0;
     top: -3px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -380,14 +408,23 @@ section.catalog__filter-size {
 }
 
 .size__options {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 4px;
 }
 
 .size__option {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     width: 25px;
     height: 18px;
@@ -445,13 +482,22 @@ section.catalog__filter-size {
 
 .catalog__showcase {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding: 0 12px 0 17px;
 }
 
 .sort-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: end;
     margin-top: 30px;
 }
@@ -463,6 +509,9 @@ section.catalog__filter-size {
     font-size: 13px;
     line-height: 28px;
     color: #29282D;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 
@@ -485,6 +534,7 @@ section.catalog__filter-size {
 
 .sort__select.active {
     border-color: #FE7427;
+    -webkit-box-shadow: 0 0 2px 0 #FE7427, inset 0 0 2px 0 #FE7427;
     box-shadow: 0 0 2px 0 #FE7427, inset 0 0 2px 0 #FE7427;
 }
 
@@ -498,11 +548,17 @@ section.catalog__filter-size {
     border-width: 1px;
     border-style: solid;
     border-color: transparent #29282D #29282D transparent;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+    -webkit-transition: all .2s;
+    -o-transition: all .2s;
     transition: all .2s;
 }
 
 .sort__select.active::after {
+    -webkit-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
     transform: rotate(225deg);
     top: 17px;
 }
@@ -548,10 +604,15 @@ section.catalog__filter-size {
 }
 
 .showcase__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 18px;
     margin-top: 21px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -559,9 +620,12 @@ section.catalog__filter-size {
     width: 220px;
     height: 355px;
     background: #FFFFFF;
+    -webkit-box-shadow: 1px 3px 14px rgba(30, 27, 26, 0.07);
     box-shadow: 1px 3px 14px rgba(30, 27, 26, 0.07);
     border-radius: 10px;
     padding: 15px 14px;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
     transition: all .3s;
     outline: 1px solid transparent;
 }
@@ -576,8 +640,14 @@ section.catalog__filter-size {
 }
 
 .item__thumb {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     width: 100%;
     height: 190px;
@@ -612,8 +682,14 @@ section.catalog__filter-size {
 }
 
 .item__buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -659,6 +735,8 @@ section.catalog__filter-size {
 .catalog__pagination {
     margin: auto 0 0;
     padding-top: 43px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 10px;
 }
@@ -692,9 +770,11 @@ section.catalog__filter-size {
         padding: 11px 10px;
         border-radius: 8px;
     }
+
     .item__thumb {
         height: 146px;
     }
+
     .item__title {
         font-size: 12px;
         line-height: 16px;
@@ -702,20 +782,26 @@ section.catalog__filter-size {
         min-height: 0;
         white-space: nowrap;
         overflow: hidden;
+        -o-text-overflow: ellipsis;
         text-overflow: ellipsis;
     }
+
     .item__price {
         font-size: 12px;
         line-height: 10px;
         margin-bottom: 9px;
     }
+
     .item__buttons-view {
         font-size: 13px;
         line-height: 16px;
         letter-spacing: 0.32px;
         padding: 6px 15px;
     }
+
     .item__buttons-heart {
+        -webkit-transform: scale(.72);
+        -ms-transform: scale(.72);
         transform: scale(.72);
     }
 }
@@ -724,41 +810,59 @@ section.catalog__filter-size {
     .catalog {
         padding-bottom: 30px;
     }
+
     .catalog.active {
         position: relative;
     }
+
     .catalog::after {
         content: '';
         position: absolute;
         inset: 0;
         background: #000;
         opacity: 0;
+        -webkit-transition: all .5s;
+        -o-transition: all .5s;
         transition: all .5s;
         visibility: hidden;
     }
+
     .catalog.active::after {
         visibility: visible;
         opacity: .5;
     }
+
     .catalog__filter {
         position: absolute;
         left: -100%;
+        -webkit-transition: all .5s;
+        -o-transition: all .5s;
         transition: all .5s;
         z-index: 2;
+        -webkit-box-shadow: 2px 4px 80px #1e1b1a;
         box-shadow: 2px 4px 80px #1e1b1a;
         border-radius: 0 0 10px 0;
         max-height: 100%;
         overflow: auto;
     }
+
     .catalog__filter.active {
         left: 0;
     }
+
     .sort-wrapper {
         gap: 12px;
     }
+
     .sort__filter-btn {
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
         display: inline-flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         gap: 12px;
         padding: 3px 0;
@@ -771,21 +875,30 @@ section.catalog__filter-size {
         border: none;
         border-radius: 7px;
     }
+
     .catalog__showcase {
         padding: 0 13px;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
     }
+
     .showcase__items {
         gap: 14px;
         margin: 20px auto 0;
     }
+
     .pagination__item {
         width: 29px;
         height: 29px;
     }
 }
+
 @media screen and (max-width: 349px) {
     .sort-wrapper {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
 }
